@@ -1,3 +1,6 @@
+Upcoming:
+- Implemented a way for the redstone transmitter and receiver to reset the channel (through the GUI)
+
 1.16-3.1.12:
 - The screen controller is now infusable again
 - The crafter is now infusable again
